# services/server/api/middleware/error-middleware/error.go
@@ -1,23 +1,25 @@
 package errormiddleware
 
 import (
-	"encoding/json"
 	"log/slog"
 	"net/http"
 
 	"github.com/Shoyeb45/server/pkg/apierr"
 	"github.com/Shoyeb45/server/pkg/logger"
 	"github.com/Shoyeb45/server/pkg/shared"
-	
 )
 
-type errorResponse struct {
+// ErrorResponse is the shape of all error responses
+// @Description Standard error response
+type ErrorResponse struct {
+	Success bool                `json:"success"`
 	Code    apierr.ErrorCode    `json:"code"`
 	Message string              `json:"message"`
 	Details []apierr.FieldError `json:"details,omitempty"`
 }
 
-
+// Middleware to pass the handler function and the error will be
+// handled by this middleware
 func ErrorHandler(h shared.HandlerFunc) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		err := h(w, r)
@@ -25,28 +27,7 @@ func ErrorHandler(h shared.HandlerFunc) http.HandlerFunc {
 			return
 		}
 
-		var apiErr *apierr.APIError
-
-		switch {
-		case apierr.As(err, &apiErr):
-			logAPIError(r, apiErr)
-			writeJSON(w, apiErr.StatusCode, errorResponse{
-				Code:    apiErr.Code,
-				Message: apiErr.Message,
-				Details: apiErr.Details,
-			})
-		default:
-			logger.Log.Error("unhandled error",
-				slog.String("method", r.Method),
-				slog.String("path", r.URL.Path),
-				slog.String("remote_addr", r.RemoteAddr),
-				slog.Any("error", err),
-			)
-			writeJSON(w, http.StatusInternalServerError, errorResponse{
-				Code:    apierr.CodeInternal,
-				Message: "an unexpected error occurred",
-			})
-		}
+		HandleError(w, r, err)
 	}
 }
 
@@ -73,25 +54,27 @@ func logAPIError(r *http.Request, err *apierr.APIError) {
 	}
 }
 
-func writeJSON(w http.ResponseWriter, status int, v any) {
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(status)
-	_ = json.NewEncoder(w).Encode(v)
-}
-
 func HandleError(w http.ResponseWriter, r *http.Request, err error) {
 	var apiErr *apierr.APIError
+
 	switch {
 	case apierr.As(err, &apiErr):
 		logAPIError(r, apiErr)
-		writeJSON(w, apiErr.StatusCode, errorResponse{
+		shared.WriteJSON(w, apiErr.StatusCode, ErrorResponse{
+			Success: false,
 			Code:    apiErr.Code,
 			Message: apiErr.Message,
 			Details: apiErr.Details,
 		})
 	default:
-		logger.Log.Error("unhandled error")
-		writeJSON(w, http.StatusInternalServerError, errorResponse{
+		logger.Log.Error("unhandled error",
+			slog.String("method", r.Method),
+			slog.String("path", r.URL.Path),
+			slog.String("remote_addr", r.RemoteAddr),
+			slog.Any("error", err),
+		)
+		shared.WriteJSON(w, http.StatusInternalServerError, ErrorResponse{
+			Success: false,
 			Code:    apierr.CodeInternal,
 			Message: "an unexpected error occurred",
 		})
